UPDATE add data attributes that communicate JS changes and when the hamburger is visible to prevent css duplication

--- a/app/styles/components/overlay.css
+++ b/app/styles/components/overlay.css
@@ -1,4 +1,4 @@
-body:has(.overlay--visible) {
+body:has([data-overlay="visible"]) {
     overflow: hidden;
 }
 
@@ -8,24 +8,26 @@ body:has(.overlay--visible) {
     opacity: 0;
     background: var(--color-neutral-900);
     transition: opacity var(--overlay-transition-duration) ease-in-out;
-    z-index: 1;
+    z-index: 2;
     pointer-events: none;
 }
 
-body:has(.overlay--visible) .overlay-backdrop {
-    opacity: 0.5;
+body:has([data-overlay="visible"]) .overlay-backdrop {
+    opacity: 1;
     pointer-events: auto;
 }
 
-.overlay {
+.overlay-container[data-overlay="visible"] {
     position: relative;
     isolation: isolate;
-    z-index: 2;
-}
-/* make sure to give position to the control to ensure the stacking context works */
-.overlay-control {
     z-index: 3;
 }
+
+:where(.overlay-container[data-overlay="visible"] .overlay-control) {
+    position: relative;
+    z-index: 4;
+}
+
 @media (prefers-reduced-motion: reduce) {
     .overlay-backdrop {
         transition: none !important;
